<resources>
    <string name="app_name">Campus Bites</string>
    <string name="university_name">Mekelle University</string>
    <string name="person_name">Name:</string>
    <string name="person_username">Username:</string>
    <string name="person_password">Password:</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="input_name">Name</string>
    <string name="input_username">Username</string>
    <string name="ticked_students">Ticked Students</string>
    <string name="reported_students">Reported Students</string>
    <string name="breakfast_usage">Breakfast Usage</string>
    <string name="dinner_usage">Dinner Usage</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="security_question">Security Question:</string>
    <string name="answer">Answer:</string>
    <string name="submit">Submit</string>
    <string name="sign_up_password">4 digit number</string>
    <string name="year">Year:</string>
    <string name="department">Department:</string>
    <string name="zero">0</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="download_data">Download data to phone:</string>
    <string name="welcome_user">Welcome User</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="today_meal">Today\'s meals:</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="report">Report</string>
    <string name="homee">Home</string>
    <string name="tickk">Tick</string>
    <string name="add_studentt">Add Student</string>

    <string-array name="security_questions">
        <item>Age</item>
        <item>Birth place</item>
        <item>Key word</item>
    </string-array>

    <string-array name="year_options">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
        <item>5th Year</item>
    </string-array>

    <string-array name="department_options">
        <item>Computer Science</item>
        <item>Information Technology</item>
        <item>Software Engineering</item>
        <item>Information Systems</item>
        <item>Civil Engineering</item>
    </string-array>

</resources>