<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TickFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tickUsername"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/input_username"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:onClick="handleSearch"
            android:text="@string/search"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tickUsername"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_marginStart="196dp"
            android:layout_marginTop="32dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerAfterSearch"
            android:layout_width="355dp"
            android:layout_height="536dp"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tickUsername">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="298dp"
                android:layout_height="346dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/person_name" />

                    <TextView
                        android:id="@+id/textViewNameOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/input_name"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department" />

                    <TextView
                        android:id="@+id/textViewDepartmentOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year" />

                    <TextView
                        android:id="@+id/textViewYearOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/today_meal" />

                    <TextView
                        android:id="@+id/textViewBreakfast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/textViewLunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/textViewDinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_background"
                android:text="@string/breakfast"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/btnLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_background"
                android:text="@string/lunch"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnDinner"
                app:layout_constraintStart_toEndOf="@+id/btnBreakfast"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/btnDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/button_background"
                android:text="@string/dinner"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/btnReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="44dp"
                android:background="@drawable/button_background"
                android:onClick="handleReport"
                android:text="@string/report"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:text="Biometric"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/btnSearch"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>