<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyStatFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"> <!-- Make rows fill half screen -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/blueLight">

            <TextView
                android:id="@+id/txtWorkHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticked_students"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valueTickedStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/blueLight">

            <TextView
                android:id="@+id/txtTickedStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reported_students"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valueReportedStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"> <!-- Make rows fill half screen -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/blueLight">

            <TextView
                android:id="@+id/txtReportedStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast_usage"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valueBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/blueLight">

            <TextView
                android:id="@+id/txtSomeProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner_usage"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/valueDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp" />
        </LinearLayout>
    </TableRow>

</TableLayout>

</LinearLayout>